ocio-sys/src/bridge.hpp

typedef struct OcioGpuTexture2DInfo {
  const char* texture_name;
  const char* sampler_name;
  unsigned width;
  unsigned height;
  int channel;
  int dimensions;
  int interpolation;
  unsigned binding_index;
} OcioGpuTexture2DInfo;
typedef struct OcioGpuTexture3DInfo {
  const char* texture_name;
  const char* sampler_name;
  unsigned edge_len;
  int interpolation;
  unsigned binding_index;
} OcioGpuTexture3DInfo;
typedef struct OcioGpuUniformInfo {
  const char* name;
  int type;
  size_t buffer_offset;
  size_t value_count;
} OcioGpuUniformInfo;
// --- Runtime ---
bool ocio_runtime_is_stub(void);
// --- Global utility functions ---
const char* ocio_get_version(void);
int ocio_get_version_hex(void);
int ocio_get_logging_level(void);
void ocio_set_logging_level(int level);
// --- Global config ---
void* ocio_get_current_config(void);
void ocio_set_current_config(void* config);
void ocio_clear_all_caches(void);
// --- BuiltinConfigRegistry ---
void* ocio_builtin_config_registry_get(void);
size_t ocio_builtin_config_registry_get_num_builtin_configs(void* handle);
void* ocio_builtin_config_registry_get_builtin_config_name(void* handle, size_t configIndex);
void* ocio_builtin_config_registry_get_builtin_config_ui_name(void* handle, size_t configIndex);
void* ocio_builtin_config_registry_get_builtin_config(void* handle, size_t configIndex);
void* ocio_builtin_config_registry_get_builtin_config_by_name(void* handle, const char* configName);
bool ocio_builtin_config_registry_is_builtin_config_recommended(void* handle, size_t configIndex);
// --- BuiltinTransformRegistry ---
void* ocio_builtin_transform_registry_get(void);
void ocio_builtin_transform_registry_destroy(void* handle);
size_t ocio_builtin_transform_registry_get_num_builtins(void* handle);
const char* ocio_builtin_transform_registry_get_builtin_style(void* handle, size_t index);
const char* ocio_builtin_transform_registry_get_builtin_description(void* handle, size_t index);
// --- ConfigIOProxy ---
void* ocio_config_io_proxy_create(void);
void ocio_config_io_proxy_destroy(void* handle);
void ocio_config_io_proxy_set_config_data(void* handle, const char* data);
const char* ocio_config_io_proxy_get_config_data(void* handle);
bool ocio_config_io_proxy_set_lut_data(
  void* handle,
  const char* filepath,
  const unsigned char* data,
  size_t len,
  const char* fastHash);
size_t ocio_config_io_proxy_get_lut_data_size(void* handle, const char* filepath);
bool ocio_config_io_proxy_copy_lut_data(
  void* handle,
  const char* filepath,
  unsigned char* data,
  size_t len);
const char* ocio_config_io_proxy_get_fast_lut_file_hash(void* handle, const char* filepath);