ocio-sys/src/lib.rs

#![allow(
    non_snake_case,
    unused_variables,
    clippy::missing_safety_doc,
    clippy::unused_unit
)]

use std::ffi::c_void;

#[repr(C)]
pub struct OcioGpuTexture2DInfo {
    pub texture_name: *const i8,
    pub sampler_name: *const i8,
    pub width: u32,
    pub height: u32,
    pub channel: i32,
    pub dimensions: i32,
    pub interpolation: i32,
    pub binding_index: u32,
}

#[repr(C)]
pub struct OcioGpuTexture3DInfo {
    pub texture_name: *const i8,
    pub sampler_name: *const i8,
    pub edge_len: u32,
    pub interpolation: i32,
    pub binding_index: u32,
}

#[repr(C)]
pub struct OcioGpuUniformInfo {
    pub name: *const i8,
    pub type_: i32,
    pub buffer_offset: usize,
    pub value_count: usize,
}

unsafe extern "C" {
    // --- Runtime ---
    pub fn ocio_runtime_is_stub() -> bool;

    // --- Global utility functions ---
    pub fn ocio_get_version() -> *const i8;
    pub fn ocio_get_version_hex() -> i32;
    pub fn ocio_get_logging_level() -> i32;
    pub fn ocio_set_logging_level(level: i32);

    // --- Global config ---
    pub fn ocio_get_current_config() -> *mut c_void;
    pub fn ocio_set_current_config(config: *mut c_void);
    pub fn ocio_clear_all_caches();

    // --- BuiltinConfigRegistry ---
    pub fn ocio_builtin_config_registry_get() -> *mut c_void;
    pub fn ocio_builtin_config_registry_get_num_builtin_configs(handle: *mut c_void) -> usize;
    pub fn ocio_builtin_config_registry_get_builtin_config_name(
        handle: *mut c_void,
        configIndex: usize,
    ) -> *mut c_void;
    pub fn ocio_builtin_config_registry_get_builtin_config_ui_name(
        handle: *mut c_void,
        configIndex: usize,
    ) -> *mut c_void;
    pub fn ocio_builtin_config_registry_get_builtin_config(
        handle: *mut c_void,
        configIndex: usize,
    ) -> *mut c_void;
    pub fn ocio_builtin_config_registry_get_builtin_config_by_name(
        handle: *mut c_void,
        configName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_builtin_config_registry_is_builtin_config_recommended(
        handle: *mut c_void,
        configIndex: usize,
    ) -> bool;
    pub fn ocio_builtin_transform_registry_get() -> *mut c_void;
    pub fn ocio_builtin_transform_registry_destroy(handle: *mut c_void);
    pub fn ocio_builtin_transform_registry_get_num_builtins(handle: *mut c_void) -> usize;
    pub fn ocio_builtin_transform_registry_get_builtin_style(
        handle: *mut c_void,
        index: usize,
    ) -> *const i8;
    pub fn ocio_builtin_transform_registry_get_builtin_description(
        handle: *mut c_void,
        index: usize,
    ) -> *const i8;
    pub fn ocio_config_io_proxy_create() -> *mut c_void;
    pub fn ocio_config_io_proxy_destroy(handle: *mut c_void);
    pub fn ocio_config_io_proxy_set_config_data(handle: *mut c_void, data: *const i8) -> ();
    pub fn ocio_config_io_proxy_get_config_data(handle: *mut c_void) -> *const i8;
    pub fn ocio_config_io_proxy_set_lut_data(
        handle: *mut c_void,
        filepath: *const i8,
        data: *const u8,
        len: usize,
        fastHash: *const i8,
    ) -> bool;
    pub fn ocio_config_io_proxy_get_lut_data_size(
        handle: *mut c_void,
        filepath: *const i8,
    ) -> usize;
    pub fn ocio_config_io_proxy_copy_lut_data(
        handle: *mut c_void,
        filepath: *const i8,
        data: *mut u8,
        len: usize,
    ) -> bool;
    pub fn ocio_config_io_proxy_get_fast_lut_file_hash(
        handle: *mut c_void,
        filepath: *const i8,
    ) -> *const i8;
